--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,15 @@
   <meta charset="utf-8">
   <title>BookMonkey</title>
   <base href="/">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <bm-root></bm-root>
+  <bm-root>
+    <div class="ui active inverted dimmer">
+      <div class="ui text loader large">Lade BookMonkey2...</div>
+    </div>
+  </bm-root>
 </body>
 </html>
